Add photo edit form page with controller methods (edit & update) - add button to edit page

--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -46,6 +46,9 @@
                         <a th:href="@{|/photos/*{id}|}" class="btn btn-light my-1">
                             <i class="fa-solid fa-eye"></i>
                         </a>
+                        <a th:href="@{|/photos/edit/*{id}|}" class="btn btn-light my-1">
+                            <i class="fa-solid fa-pen-to-square"></i>
+                        </a>
                     </div>
                 </div>
             </div>
