Add categories index page (only list) with controller method - create CategoryService - add badges with number of photos for each category - fix field name messages in category model

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,8 +21,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-semibold text-secondary" href="#">
-                        <span>CATEGORIE</span>
+                    <a class="nav-link fw-semibold text-secondary" th:href="@{/categories}">
+                        <span th:classappend="${current == 'categories' ? 'ms-active' : ''}">CATEGORIE</span>
                     </a>
                 </li>
             </ul>
