--- a/src/main/resources/templates/categories/index.html
+++ b/src/main/resources/templates/categories/index.html
@@ -20,6 +20,13 @@
                               th:text="|*{photos.size()} foto|"></span>
                         <p th:text="*{description}"></p>
                     </div>
+                    <div class="mx-2 d-flex align-self-center">
+                        <!-- passo il paramentro opzionale editCategory per avere i campi pre-caricati -->
+                        <a th:href="@{/categories(editCategory=*{id})}"
+                           class="btn btn-light me-1">
+                            <i class="fa-solid fa-pen-to-square"></i>
+                        </a>
+                    </div>
                 </li>
             </ol>
             <!-- messaggio informativo se NON ci sono categorie -->
@@ -32,6 +39,8 @@
             <h3 class="fw-semibold text-secondary mb-3">Aggiungi categoria</h3>
             <form th:action="@{/categories/save}"
                   th:object="${categoryObj}" method="post" id="category-form" class="row">
+                <!-- passo l'id della category al form come attributo nascosto per non creare un oggetto nuovo ad ogni modifica -->
+                <input type="hidden" th:field="*{id}">
                 <div class="mb-3">
                     <label class="form-label fw-semibold" for="name">Nome*</label>
                     <input class="form-control" type="text" id="name" th:field="*{name}"
