Add categories checkboxes in create/edit photo form and print in show photo page - Print categories as list group on photo card - implement logic to delete categories from photos in CategoryController (delete method)

--- a/src/main/resources/templates/categories/index.html
+++ b/src/main/resources/templates/categories/index.html
@@ -84,7 +84,7 @@
                     <button class="btn btn-success fw-semibold me-2" type="submit"><i
                             class="fa-solid fa-check me-1"></i> Salva
                     </button>
-                    <!-- rimando alla pagina di dettaglio della foto -->
+                    <!-- rimando alla pagina delle categorie -->
                     <a class="btn btn-light fw-semibold" th:href="@{/categories}" type="reset"><i
                             class="fa-solid fa-delete-left me-1"></i>
                         Annulla</a>
