--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -30,32 +30,42 @@
         </form>
     </div>
     <div class="row">
-        <div th:if="${photoList.size() > 0}" th:each="photo : ${photoList}" class="col-4 mb-5" th:object="${photo}">
+        <div th:if="${photoList.size() > 0}" th:each="photo : ${photoList}"
+             class="d-flex justify-content-center col-md-6 col-lg-4 mb-5"
+             th:object="${photo}">
             <div class="card h-100" style="max-width: 20rem;">
                 <img th:src="*{url}" class="card-img-top img-thumbnail img-fluid" style="max-height: 18rem;"
                      th:alt="*{title}">
-                <div class="card-body d-flex flex-column justify-content-between">
+                <div class="card-body d-flex flex-column">
                     <div class="mb-3">
                         <h5 th:text="*{title}" class="card-title"></h5>
-                        <p th:text="*{description}" class="card-text"></p>
-                        <span th:if="*{isVisible}" th:text="Pubblica" class="badge text-bg-success m-1"></span>
-                        <span th:unless="*{isVisible}" th:text="Privata" class="badge text-bg-danger m-1"></span>
+                        <p th:text="*{description}" class="card-text text-truncate"></p>
                     </div>
-                    <!-- azioni -->
-                    <div class="text-center">
-                        <a th:href="@{|/photos/*{id}|}" class="btn btn-light my-1">
-                            <i class="fa-solid fa-eye"></i>
-                        </a>
-                        <a th:href="@{|/photos/edit/*{id}|}" class="btn btn-light my-1">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </a>
-                        <!-- button per cancellare la foto -->
-                        <form class="d-inline-block" th:action="@{|/photos/delete/*{id}|}"
-                              method="post">
-                            <button class="btn btn-outline-danger" type="submit"><i class="fa-solid fa-trash"></i>
-                            </button>
-                        </form>
+                    <div th:if="*{categories.size > 0}" class="mb-3">
+                        <strong>Categorie:</strong>
+                        <span class="badge text-bg-secondary m-1"
+                              th:each="cat : *{categories}"
+                              th:text="${cat.name}"></span>
                     </div>
+                </div>
+                <div class="text-center mb-3">
+                    <span th:if="*{isVisible}" th:text="Pubblica" class="badge text-bg-success m-1"></span>
+                    <span th:unless="*{isVisible}" th:text="Privata" class="badge text-bg-danger m-1"></span>
+                </div>
+                <!-- azioni -->
+                <div class="text-center mb-3">
+                    <a th:href="@{|/photos/*{id}|}" class="btn btn-light my-1">
+                        <i class="fa-solid fa-eye"></i>
+                    </a>
+                    <a th:href="@{|/photos/edit/*{id}|}" class="btn btn-light my-1">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </a>
+                    <!-- button per cancellare la foto -->
+                    <form class="d-inline-block" th:action="@{|/photos/delete/*{id}|}"
+                          method="post">
+                        <button class="btn btn-outline-danger" type="submit"><i class="fa-solid fa-trash"></i>
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
