--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -9,14 +9,13 @@
 <main class="container py-3" th:object="${photo}">
     <h1 th:text="|Foto: *{title}|" class="fw-semibold text-center text-secondary mb-4"></h1>
     <div class="d-flex justify-content-center">
-        <div class="card w-50">
+        <div class="card col-sm-9 col-lg-6">
             <img th:src="*{url}" class="card-img-top img-thumbnail img-fluid" style="max-height: 500px;"
                  th:alt="*{title}">
             <div class="card-body d-flex flex-column justify-content-between p-4">
                 <div class="mb-3">
                     <h5 th:text="*{title}" class="card-title fw-semibold"></h5>
                     <p th:text="*{description}" class="card-text"></p>
-                    a
                     <div class="mb-3">
                         <div class="card-header">
                             <strong>Categorie</strong>
