--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -33,7 +33,7 @@
         <div th:if="${photoList.size() > 0}" th:each="photo : ${photoList}"
              class="d-flex justify-content-center col-md-6 col-lg-4 mb-5"
              th:object="${photo}">
-            <div class="card h-100" style="max-width: 20rem;">
+            <div class="card h-100 w-100" style="max-width: 20rem;">
                 <img th:src="*{url}" class="card-img-top img-thumbnail img-fluid" style="max-height: 18rem;"
                      th:alt="*{title}">
                 <div class="card-body d-flex flex-column">
