--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -10,7 +10,11 @@
     <h1 th:text="|Foto: *{title}|" class="fw-semibold text-center text-secondary mb-4"></h1>
     <div class="d-flex justify-content-center">
         <div class="card col-sm-9 col-lg-6">
-            <img th:src="*{url}" class="card-img-top img-thumbnail img-fluid" style="max-height: 500px;"
+            <img th:if="*{urlUpload}" th:src="@{|/files/url/*{id}|}" class="card-img-top img-thumbnail img-fluid"
+                 style="max-height: 500px;"
+                 th:alt="*{title}">
+            <img th:unless="*{urlUpload}" th:src="*{url}" class="card-img-top img-thumbnail img-fluid"
+                 style="max-height: 500px;"
                  th:alt="*{title}">
             <div class="card-body d-flex flex-column justify-content-between p-4">
                 <div class="mb-3">
